newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/accountActive__c.field-meta.xml
<CustomField>
    <fullName>accountActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>accountActive</label>
    <type>Checkbox</type>
</CustomField>