newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/AutoNumber1__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AutoNumber1</label>
    <referenceTo>AutoNumber__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>