newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Average_Deal_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Amount_c__c</fullName>
    <label>Average_Deal_Amount__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>