newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/CheckboxVar__c.field-meta.xml
<CustomField>
    <fullName>CheckboxVar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxVar</label>
    <type>Checkbox</type>
</CustomField>