newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Contact_custom__c.field-meta.xml
<CustomField>
    <fullName>Contact_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact_custom</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>