newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Contact_Size__c.field-meta.xml
<CustomField>
    <fullName>Contact_Size__c</fullName>
    <label>Contact Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>