newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Contacts_To_Be_Created__c.field-meta.xml
<CustomField>
    <fullName>Contacts_To_Be_Created__c</fullName>
    <label>Contacts_To_Be_Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>