newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Create_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create_Contact</label>
    <type>Checkbox</type>
</CustomField>