newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>CustomerID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>