newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/grandOrderActivityAmount__c.field-meta.xml
<CustomField>
    <fullName>grandOrderActivityAmount__c</fullName>
    <label>grandOrderActivityAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>