newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/No_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Contact__c</fullName>
    <label>NoOfContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>