newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/OracleID__c.field-meta.xml
<CustomField>
    <fullName>OracleID__c</fullName>
    <label>OracleID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>