newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Owner2__c.field-meta.xml
<CustomField>
    <fullName>Owner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>