newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Owner3__c.field-meta.xml
<CustomField>
    <fullName>Owner3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Owner3)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>