newProjectCQ/LuckyCq/force-app/main/default/objects/Account/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <label>Taxes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8.00%</fullName>
            </value>
            <value>
                <fullName>8.50%</fullName>
            </value>
            <value>
                <fullName>8.88%</fullName>
            </value>
            <value>
                <fullName>8.13%</fullName>
            </value>
            <value>
                <fullName>8.75%</fullName>
            </value>
            <value>
                <fullName>8.25%</fullName>
            </value>
            <value>
                <fullName>8.63%</fullName>
            </value>
            <value>
                <fullName>8.38%</fullName>
            </value>
            <value>
                <fullName>7.00%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>