newProjectCQ/LuckyCq/force-app/main/default/objects/Account/recordTypes/Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Recordtype</fullName>
    <active>true</active>
    <label>Recordtype</label>
</RecordType>