newProjectCQ/LuckyCq/force-app/main/default/objects/Account/recordTypes/Recordtypetest.recordType-meta.xml
<RecordType>
    <fullName>Recordtypetest</fullName>
    <active>true</active>
    <label>Recordtypetest</label>
</RecordType>