newProjectCQ/LuckyCq/force-app/main/default/objects/Account/recordTypes/vender.recordType-meta.xml
<RecordType>
    <fullName>vender</fullName>
    <active>true</active>
    <label>vender</label>
</RecordType>