newProjectCQ/LuckyCq/force-app/main/default/objects/Account/validationRules/Required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_field</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( AccountNumber )</errorConditionFormula>
    <errorMessage>Account number is require</errorMessage>
</ValidationRule>