newProjectCQ/LuckyCq/force-app/main/default/objects/Account/validationRules/TypeError.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeError</fullName>
    <active>false</active>
    <description>if role contain salesforce then don&apos;t show error.</description>
    <errorConditionFormula>AND (
    ISNEW(),
    CONTAINS($UserRole.Name ,&apos;Salesforce&apos;) 
)</errorConditionFormula>
    <errorMessage>You name  contain salesforce.</errorMessage>
</ValidationRule>