newProjectCQ/LuckyCq/force-app/main/default/objects/Account/listViews/NewList.listView-meta.xml
<ListView>
    <fullName>NewList</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Owner2__c</columns>
    <columns>Owner3__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Owner2__c</field>
        <operation>equals</operation>
        <value>VT1</value>
    </filters>
    <label>NewList</label>
    <sharedTo>
        <roleAndSubordinates>CEO</roleAndSubordinates>
    </sharedTo>
</ListView>